err/pywayback.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/argh'...
Listing './lib/python3.5/site-packages/argh-0.26.2.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pathtools'...
Listing './lib/python3.5/site-packages/pathtools-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pywayback-0.10.9.1.egg-info'...
Listing './lib/python3.5/site-packages/pywb'...
Listing './lib/python3.5/site-packages/pywb/apps'...
Listing './lib/python3.5/site-packages/pywb/cdx'...
Compiling './lib/python3.5/site-packages/pywb/cdx/zipnum.py'...
***   File "./lib/python3.5/site-packages/pywb/cdx/zipnum.py", line 307
    raise last_exc, None, last_traceback
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywb/framework'...
Compiling './lib/python3.5/site-packages/pywb/framework/wsgi_wrappers.py'...
***   File "./lib/python3.5/site-packages/pywb/framework/wsgi_wrappers.py", line 100
    print err_details
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pywb/manager'...
Listing './lib/python3.5/site-packages/pywb/perms'...
Listing './lib/python3.5/site-packages/pywb/rewrite'...
Compiling './lib/python3.5/site-packages/pywb/rewrite/rewrite_content.py'...
***   File "./lib/python3.5/site-packages/pywb/rewrite/rewrite_content.py", line 270
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywb/static'...
Listing './lib/python3.5/site-packages/pywb/static/flowplayer'...
Listing './lib/python3.5/site-packages/pywb/templates'...
Listing './lib/python3.5/site-packages/pywb/utils'...
Compiling './lib/python3.5/site-packages/pywb/utils/statusandheaders.py'...
***   File "./lib/python3.5/site-packages/pywb/utils/statusandheaders.py", line 96
    except ValueError, AssertionError:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywb/warc'...
Compiling './lib/python3.5/site-packages/pywb/warc/cdxindexer.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cdxindexer.py, line 161)
Compiling './lib/python3.5/site-packages/pywb/warc/resolvingloader.py'...
***   File "./lib/python3.5/site-packages/pywb/warc/resolvingloader.py", line 128
    raise ArchiveLoadFailed(msg, filename), None, last_traceback
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pywb/webapp'...
Compiling './lib/python3.5/site-packages/pywb/webapp/live_rewrite_handler.py'...
***   File "./lib/python3.5/site-packages/pywb/webapp/live_rewrite_handler.py", line 59
    print err_details
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/requests_file-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/surt'...
Listing './lib/python3.5/site-packages/surt-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/fixture.py'...
***   File "./lib/python3.5/site-packages/tests/fixture.py", line 23
    print wbrequest
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test_cdx_server_app.py'...
***   File "./lib/python3.5/site-packages/tests/test_cdx_server_app.py", line 55
    print resp.body.splitlines()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tldextract'...
Listing './lib/python3.5/site-packages/tldextract/tests'...
Listing './lib/python3.5/site-packages/tldextract-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/watchdog'...
Listing './lib/python3.5/site-packages/watchdog/observers'...
Listing './lib/python3.5/site-packages/watchdog/tricks'...
Listing './lib/python3.5/site-packages/watchdog/utils'...
Listing './lib/python3.5/site-packages/watchdog-0.8.3.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './sample_archive'...
Listing './sample_archive/cdx'...
Listing './sample_archive/cdxj'...
Listing './sample_archive/non-surt-cdx'...
Listing './sample_archive/text_content'...
Listing './sample_archive/warcs'...
Listing './sample_archive/zipcdx'...
Listing './share'...
Listing './share/python-wheels'...
